[package]
name = "realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features=["derive"] }
uuid = { version = "1.0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version="0.7.2", features=["codec"] }
tokio-tungstenite = { verison = "0.17.1", features=["native-tls"] }
tungstenite = "0.17.1"
futures-util = "0.3.21"
url = "2.2.2"
futures-channel = "0.3.21"
futures = "0.3.21"
log = "0.4.17"
env_logger = "0.9.0"
stream-reconnect = { version = "0.3", default-features = true }
