[package]
name = "walrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
diesel = { version = "2.0.0-rc.0", features = ["postgres", "serde_json", "uuid"] }
diesel_migrations = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = "1.0"
uuid = { version = "1.0", features = ["serde"] }

