[package]
name = "walrus"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
diesel = { version = "2.0.0-rc.0", features = ["postgres", "serde_json", "uuid", "chrono"] }
diesel_migrations = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
log = "0.4.17"
env_logger = "0.9.0"
itertools = "0.10.3"
cached = "0.34.1"
chrono = { version = "0.4", features = ["serde"] }


[dev-dependencies]
pretty_assertions = "1.2.1"
